Feat: 카카오 로그인 연결 및 access token 저장 (#4)
* Package: Axios 설치

* Style: eslint rules 추가

* Feat: login api함수 정리 및 test api 함수와 분리

* Feat: redirect 페이지 생성 및 login 기능 연결

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -652,6 +652,9 @@ section .title_area .title {
   font-size: 24px;
   font-weight: 500;
 }
+.layer_popup .btn_signin {
+  cursor: pointer;
+}
 .layer_popup .nickname {
   font-size: 24px;
   display: -webkit-box;
