Design: 내 결과 페이지 생성 및 로그인 처리 (#5)
[branch 분기 과정에서 이전 squash merge의 commit 함께 push됨]
- 아래가 실제 현 브랜치의 작업 기록

* Design: ModalLayout 생성 및 ModalContent 분리작성

* Feat: Logout 버튼 생성 및 기능 연결

* Design: 내 결과 페이지 퍼블리싱 임시 수정 및 router연결

* Feat: axios interceptor 생성 및 내 결과 리스트 불러오기 api 작성

* Package: Recoil 설치

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -184,7 +184,7 @@ header .title_area {
 }
 header .title_area .title {
   font-size: 24px;
-  padding: 8px 10px 12px;
+  padding: 20px 0 15px;
 }
 header .logo {
   margin: 0 10px;
@@ -524,7 +524,7 @@ section .title_area .title {
 }
 
 .result_list {
-  background-color: #f4f4f4;
+  background-color: #fff;
 }
 .result_list section {
   margin: 0;
@@ -555,7 +555,6 @@ section .title_area .title {
 }
 .title_list .title {
   font-weight: 500;
-  font-size: 14px;
   padding: 16px 8px;
 }
 .title_list .title.sub {
@@ -687,7 +686,7 @@ section .title_area .title {
   margin: 16px 0;
 }
 .layer_popup .menu_list .menu_item {
-  width: calc(50% - 8px);
+  padding: 3px;
   font-size: 14px;
   color: #999;
 }
